--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.000
 *.bak
 *.bck
+*.log
 *.kicad_pcb-bak
 *.kicad_sch-bak
 *-backups
@@ -15,8 +16,14 @@ _autosave-*
 *.tmp
 *-save.pro
 *-save.kicad_pcb
-fp-info-cache
 ~*.lck
+
+# Cache files
+fp-info-cache
+fp-lib-table
+sym-lib-table
+*-cache.lib
+
 \#auto_saved_files#
 
 # Netlist files (exported from Eeschema)
@@ -29,3 +36,6 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+
+# Automatically saved release job files
+/PCB source/release
